@startuml patron-command
hide empty members

abstract class Command {
  -title: String
  +set(Feature)
  +isAvailable(): boolean
  {abstract} +execute()
}
abstract class Menu {
  #commands: List<Command>
  {abstract} +setCommand()
  +execute()
}
class MainMenu {
  +setLoadGame(Feature)
  +setReplay(Feature)
  +setShowStats(Feature)
  +setProfile(Feature)
  +setShowAchievements(Feature)
}
class GameMenu
class ExitCommand
class StartGameCommand
class LoadGameCommand
class ReplayGameCommand
class ShowStatsCommand
class ProfileCommand
class ShowAchievementsCommand

Command <|-- Menu
Menu <|-- MainMenu
Menu <|-- GameMenu
Command <|-- ExitCommand
Command <|-- StartGameCommand
Command <|-- LoadGameCommand
Command <|-- ReplayGameCommand
Command <|-- ShowStatsCommand
Command <|-- ProfileCommand
Command <|-- ShowAchievementsCommand

MainMenu o-> GameMenu
MainMenu o-> LoadGameCommand
MainMenu o-> ReplayGameCommand
MainMenu o-> ShowStatsCommand
MainMenu o-> ProfileCommand
MainMenu o-> ShowAchievementsCommand
GameMenu o-> StartGameCommand

note bottom of Menu
  execute() es un bucle: muestra los Command con
  isAvailable()==true, delega en el elegido,
  hasta que ExitCommand marca closed()
end note
@enduml
